--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,6 +58,9 @@
                         </ul>
                     </div>
             </div>
+            <div class="about-col-3">
+                <img src="img/balam-evora.jpg" alt="">
+            </div>
         </div>
     </div>
 </div>
