estilo general completado

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,10 +20,13 @@
 <div class="section" id="about">
     <div class="container">
         <div class="row">
+            <h1 class="sub-title">About Me</h1>
             <div class="about-col-1">
+                <img src="img/balam_nobackground.png" alt="">
+            </div>
+            <div class="about-col-3">
                 <img src="img/balam-evora.jpg" alt="">
             </div>
-            <h1 class="sub-title">About Me</h1>
             <div class="about-col-2">
                 <p>Geographer since 2014. Specialized in natural resource management, 
                     sustainable territorial planning, and particularly focused on geospatial 
@@ -58,9 +61,7 @@
                         </ul>
                     </div>
             </div>
-            <div class="about-col-3">
-                <img src="img/balam-evora.jpg" alt="">
-            </div>
+
         </div>
     </div>
 </div>
@@ -104,7 +105,7 @@
 
 <div class="section" id="portfolio">
     <div class="wrap">
-        <h1 class="sub-title">My work</h1>
+        <h1 class="sub-title">Portfolio</h1>
         <div class="work-list">
             <div class="work">
                 <img src="img\laguna.png" alt="Aquí va una imagen">
