--- a/views/home.ejs
+++ b/views/home.ejs
@@ -95,7 +95,7 @@
                 <i class="fa-solid fa-images"></i>
                 <h2>Photography</h2>
 
-                    <a href="../fotos/index.html" >learn more</a>
+                    <a href="/portfolio" >learn more</a>
             </div>
         </div>
     </div>
@@ -160,6 +160,7 @@
                 <div class="social-CV">
                     <button type="submit" class="btn">Download CV</button>
                     <div class="social-icons">
+                        <a href="https://github.com/ekbalam11/"><i class="fa-brands fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/balamcastro/"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://www.instagram.com/balam_castro/"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://twitter.com/Balam_CT"><i class="fa-brands fa-twitter"></i></a>
