--- a/public/style.css
+++ b/public/style.css
@@ -433,6 +433,14 @@ form input, form textarea{
     background-size: cover;
     background-position: center;
 }
+.header{
+    width: 100%;
+    height: 100vh;
+    background-image: url(./img/background.avif);
+    background-color: #edebeb;
+    background-size: cover;
+    background-position: center;
+}
 
 main{
     background-color: var(--black);
