--- a/public/style.css
+++ b/public/style.css
@@ -433,15 +433,17 @@ form input, form textarea{
     background-size: cover;
     background-position: center;
 }
-.header{
-    width: 100%;
-    height: 100vh;
-    background-image: url(./img/background.avif);
-    background-color: #edebeb;
-    background-size: cover;
-    background-position: center;
-}
 
+#balam{
+    font-size: 4rem;
+    color: darkcyan;
+    font-weight: 800;
+}
+.slogan{
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+}
 main{
     background-color: var(--black);
 }
@@ -516,6 +518,11 @@ main{
 
 .tab-links.active-link::after{
     width: 100%;
+}
+#hidden-picture img{
+    width: 50px;
+    grid-column: 3/4;
+    grid-row: 2/3;
 }
 
 .tab-contents ul li{
