--- a/views/home.ejs
+++ b/views/home.ejs
@@ -180,7 +180,7 @@
                         <p><i class="fa-regular fa-comments"></i>ekbalam11@gmail.com</p>
                         <p><i class="fa-solid fa-mobile-screen"></i>(+34)666140628</p>
                         <div class="social-CV">
-                            <button type="submit" class="btn">Download CV</button>
+                            <a href="/download-CV" download="../public/resources/BalamCastroCV2024.pdf"><button type="submit" class="btn">Download CV</button></a>
                             <div class="social-icons">
                                 <a href="https://github.com/ekbalam11/"><i class="fa-brands fa-github"></i></a>
                                 <a href="https://www.linkedin.com/in/balamcastro/"><i
@@ -221,7 +221,8 @@
             }
             event.currentTarget.classList.add("active-link");
             document.getElementById(tabname).classList.add("active-tab");
-        }
+        };
+
     </script>
 </body>
 
