all links corrected

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,8 +10,8 @@
                     <% } %>
         </li>
         <li class="hideOnMobile"><a href="/">Home</a></li>
-        <li class="hideOnMobile"><a href="#">About me</a></li>
-        <li class="hideOnMobile"><a href="/">Services</a></li>
+        <li class="hideOnMobile"><a href="#about">About me</a></li>
+        <li class="hideOnMobile"><a href="#services">Services</a></li>
         <li><a href="/portfolio">See portfolio</a></li>
         <% if(isAdmin) { %>
             <li class="hideOnMobile"><a href="/admin/new-photo">Add Photos</a></li>
