--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1-0">
-<title>🐆-Balam Castro</title>
+<title> 🐆 Balam Castro </title>
 <link rel="stylesheet" href="\style.css">
 <link rel="stylesheet" href="\portfolio-style.css">
 <!-- <link rel="stylesheet" href="\reset-style.css"> -->
