firsts photos upload

--- a/views/new-photo.ejs
+++ b/views/new-photo.ejs
@@ -24,7 +24,7 @@
             <label for="date">Fecha de toma</label>
             <input type="date" id="date" name="date">
             <div class="photo-upload">
-                <label for="photo">URL</label>
+                <label for="url">URL</label>
                 <input type="url" name="url" id="url" placeholder="URL"></input>
                 <!-- <label for="photo">Sube una o varias foto para tu anuncio</label> -->
                 <!-- <input type="file" id="photo" name="photo" accept=".jpg, .jpeg, .png, .gif, .pdf, WebP" multiple>
